playground/realtime-age/base/realtime-age-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  type: ClusterIP
  selector:
    app: caddy
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
